# EasyCompiler

./: CMakeLists.txt  README.md  makefile
global/: VarType.cpp  VarType.h  type.cpp  type.h
source/: C.g4  calculator.g4  q  q.c  sysy.g4  sysyNode.g4
source/.antlr/: CBaseListener.java  CLexer.java  CListener.java  CParser.java  calculator.interp  calculator.tokens  calculatorLexer.interp  calculatorLexer.java  calculatorParser.java  sysy.interp  sysy.tokens  sysyLexer.java  sysyNodeLexer.interp  sysyNodeLexer.java  sysyNodeLexer.tokens  sysyParser.java
source/SymbolTable/: Block.cpp  Block.h  FuncSybTable.cpp  FuncSybTable.h  Function.cpp  Function.h  ID.cpp  ID.h  Var.cpp  Var.h  VarSybTable.cpp  VarSybTable.h
source/ast/: AST.cpp  AST.h  Antlr4CSTVisitor.cpp  Antlr4CSTVisitor.h  AntlrExecutor.h  AstFunc.cpp  AstFunc.h  AstNode.cpp  AstNode.h  OperatorNode.cpp  OperatorNode.h  StmtNode.cpp  StmtNode.h
source/autogen/: sysyBaseVisitor.cpp  sysyBaseVisitor.h  sysyLexer.cpp  sysyLexer.h  sysyLexer.interp  sysyParser.cpp  sysyParser.h  sysyVisitor.cpp  sysyVisitor.h
source/codegen/: AsmCodeGenerator.cpp  AsmCodeGenerator.h  regman.cpp  regman.h  riscvasm.cpp  riscvasm.h  riscvfunc.cpp  riscvfunc.h  riscvtype.h
source/llvmir/: BlockGenerator.cpp  BlockGenerator.h  GlobalGenerator.cpp  GlobalGenerator.h  IRGen.cpp  IRGen.h  IRInstruction.cpp  IRInstruction.h  irtype.h
source/src/: Antlr4CSTVisitor.cpp  Antlr4CSTVisitor.h  AntlrExecutor.cpp  AntlrExecutor.h  main.cpp  visualization.cpp  visualization.h
source/symbolTable/: FuncSybTable.cpp  FuncSybTable.h  Function.cpp  Function.h  ID.cpp
